feat(navbar): add header navigation with dark theme layout

--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>ALYRENIKO - Haydarov Diyor</title>
         <link rel="stylesheet" href="styles.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+            integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
     </head>
     <body>
+        <header class="navbar">
+            <a href="#home">Home</a>
+            <a href="#projects">Projects</a>
+            <a href="#about">About me</a>
+            <a href="#contact">Contact</a>
+            <a href=""><i class="fa-solid fa-moon"></i></a>
+            <!-- реализовать переключение темы -->
+        </header>
         <main>
             <h1 class="identity">
                 <span class="identity__name">HAYDAROV DIYOR</span>
