feat (projects): add portfolio sections with project cards

--- a/index.html
+++ b/index.html
@@ -5,13 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>ALYRENIKO - Haydarov Diyor</title>
         <link rel="stylesheet" href="styles.css" />
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-            integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     </head>
     <body>
         <header class="navbar">
@@ -28,5 +22,160 @@
                 <span class="identity__alias">ALYRENIKO</span>
             </h1>
         </main>
+        <section class="design-portfolio projects">
+            <div class="card">
+                <img class="card__image" src="https://dummyimage.com/1280x720/222/aaa" alt="card__image" width="100%"/>
+                <h3 class="card__title">Design</h3>
+                <p class="card__description"> Lorem ipsum dolor sit amet, quis in labore minim elit veniam ut excepteur laborum dolor nostrud id sit laborum lorem deserunt nulla nostrud labore ad</p>
+                <div class="card__links">
+                    <a href="">Behance <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="">Dribbble <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="card">
+                <img
+                    class="card__image"
+                    src="https://dummyimage.com/1280x720/222/aaa"
+                    alt="card__image"
+                    width="100%"
+                />
+                <h3 class="card__title">Design</h3>
+                <p class="card__description">
+                    Lorem ipsum dolor sit amet, quis in labore minim elit veniam
+                    ut excepteur laborum dolor nostrud id sit laborum lorem
+                    deserunt nulla nostrud labore ad
+                </p>
+                <div class="card__links">
+                    <a href=""
+                        >Behance
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i
+                    ></a>
+                    <a href=""
+                        >Dribbble
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i
+                    ></a>
+                </div>
+            </div>
+            <div class="card">
+                <img
+                    class="card__image"
+                    src="https://dummyimage.com/1280x720/222/aaa"
+                    alt="card__image"
+                    width="100%"
+                />
+                <h3 class="card__title">Design</h3>
+                <p class="card__description">
+                    Lorem ipsum dolor sit amet, quis in labore minim elit veniam
+                    ut excepteur laborum dolor nostrud id sit laborum lorem
+                    deserunt nulla nostrud labore ad
+                </p>
+                <div class="card__links">
+                    <a href=""
+                        >Behance
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i
+                    ></a>
+                    <a href=""
+                        >Dribbble
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i
+                    ></a>
+                </div>
+            </div>
+            <div class="card">
+                <img
+                    class="card__image"
+                    src="https://dummyimage.com/1280x720/222/aaa"
+                    alt="card__image"
+                    width="100%"
+                />
+                <h3 class="card__title">Design</h3>
+                <p class="card__description">
+                    Lorem ipsum dolor sit amet, quis in labore minim elit veniam
+                    ut excepteur laborum dolor nostrud id sit laborum lorem
+                    deserunt nulla nostrud labore ad
+                </p>
+                <div class="card__links">
+                    <a href=""
+                        >Behance
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i
+                    ></a>
+                    <a href=""
+                        >Dribbble
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i
+                    ></a>
+                </div>
+            </div>
+        </section>
+        <section class="code-portfolio projects">
+            <div class="card">
+                <h3 class="card__title">Code</h3>
+                <p class="card__description"> Lorem ipsum dolor sit amet, quis in labore minim elit veniam ut excepteur laborum dolor nostrud id sit laborum lorem deserunt nulla nostrud labore ad</p>
+                <div class="card__tags">
+                    <p>UX/UX</p>
+                    <p>Figma</p>
+                    <p>HTML5</p>
+                    <p>CSS3</p>
+                </div>
+                <div class="card__links">
+                    <a href="">GitHub <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="">GitLab <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="card">
+                <h3 class="card__title">Code</h3>
+                <p class="card__description"> Lorem ipsum dolor sit amet, quis in labore minim elit veniam ut excepteur laborum dolor nostrud id sit laborum lorem deserunt nulla nostrud labore ad</p>
+                <div class="card__tags">
+                    <p>UX/UX</p>
+                    <p>Figma</p>
+                    <p>HTML5</p>
+                    <p>CSS3</p>
+                </div>
+                <div class="card__links">
+                    <a href="">GitHub <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="">GitLab <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="card">
+                <h3 class="card__title">Code</h3>
+                <p class="card__description"> Lorem ipsum dolor sit amet, quis in labore minim elit veniam ut excepteur laborum dolor nostrud id sit laborum lorem deserunt nulla nostrud labore ad</p>
+                <div class="card__tags">
+                    <p>UX/UX</p>
+                    <p>Figma</p>
+                    <p>HTML5</p>
+                    <p>CSS3</p>
+                </div>
+                <div class="card__links">
+                    <a href="">GitHub <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="">GitLab <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="card">
+                <h3 class="card__title">Code</h3>
+                <p class="card__description"> Lorem ipsum dolor sit amet, quis in labore minim elit veniam ut excepteur laborum dolor nostrud id sit laborum lorem deserunt nulla nostrud labore ad</p>
+                <div class="card__tags">
+                    <p>UX/UX</p>
+                    <p>Figma</p>
+                    <p>HTML5</p>
+                    <p>CSS3</p>
+                </div>
+                <div class="card__links">
+                    <a href="">GitHub <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="">GitLab <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="card">
+                <h3 class="card__title">Code</h3>
+                <p class="card__description"> Lorem ipsum dolor sit amet, quis in labore minim elit veniam ut excepteur laborum dolor nostrud id sit laborum lorem deserunt nulla nostrud labore ad</p>
+                <div class="card__tags">
+                    <p>Python</p>
+                    <p>pygame</p>
+                    <p>HTML5</p>
+                    <p>CSS3</p>
+                </div>
+                <div class="card__links">
+                    <a href="">GitHub <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="">GitLab <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
